<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_profile"
        android:enabled="true"
        android:title="@string/profile"/>
    <item
        android:id="@+id/action_calender"
        android:icon="@drawable/ic_calendar"
        android:enabled="true"
        android:title="@string/calender"/>

    <item
        android:id="@+id/action_addplan"
        android:icon="@drawable/ic_plus_circle"
        android:enabled="true"
        android:title="@string/add"/>

    <item
        android:id="@+id/action_today"
        android:icon="@drawable/ic_list_check"
        android:enabled="true"
        android:title="@string/today"/>
    <item
        android:id="@+id/action_plantEncyclopedia"
        android:icon="@drawable/ic_journal"
        android:enabled="true"
        android:title="@string/plantbook"/>

</menu>