<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/suit_semibold"
        android:text="@string/titleAdd"
        android:textColor=" #334d40"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="286dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:srcCompat="@drawable/bg_addplan_plan" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="286dp"
        android:layout_height="46dp"
        android:layout_marginTop="136dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_addplan_plan"
        app:tint="#334d40" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="168dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:buttonTint="#334D40"
        android:fontFamily="@font/suit_medium"
        android:text="@string/addOnCalendar"
        android:textColor="@color/green5"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green0"
        android:ems="16"
        android:fontFamily="@font/suit_semibold"
        android:hint="@string/addPlan"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/green5"
        android:textColorHint="#334D40"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginTop="208dp"
        android:backgroundTint="@color/green0"
        android:fontFamily="@font/suit_semibold"
        android:text="@string/addPlan"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/green5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="31dp"
        android:layout_height="33dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:srcCompat="@drawable/ic_calendar_week"
        app:tint="@color/green4" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="날짜 정보 뜨는 칸"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.481" />

</androidx.constraintlayout.widget.ConstraintLayout>